--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -262,5 +262,5 @@ create_infrastructure:
               --region us-east-1
       # Fail the job intentionally to simulate an error.
       # Uncomment the line below if you want to fail the current step
-      - run: return 1
+      # - run: return 1
       - destroy_environment
