--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -231,6 +231,17 @@ orbs:
 #           requires:
 #             - get_last_deployment_id
 #             - promote_to_production
+commands:
+  # Exercise - Rollback
+  destroy_environment:
+    steps:
+      - run:
+          name: Destroy environment
+          # ${CIRCLE_WORKFLOW_ID} is a Built-in environment variable 
+          # ${CIRCLE_WORKFLOW_ID:0:5} takes the first 5 chars of the variable CIRCLE_CI_WORKFLOW_ID 
+          when: on_fail
+          command: |
+            aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5}
 
 jobs:
   create_infrastructure: 
@@ -283,6 +294,7 @@ jobs:
             else
               return 1
             fi
+      - destroy_environment  
 # Sequential workflow
 workflows:
   # Name the workflow
